IE: fixed sub header overflow. Closes #1213

--- a/app/assets/stylesheets/accordion.sass
+++ b/app/assets/stylesheets/accordion.sass
@@ -70,7 +70,7 @@
             float: right
             margin-right: 4px
             height: 26px
-            width: 123px
+            width: 128px
             text-align: right
             background: #fff image-url('slides/grey_triangle_down.gif') no-repeat scroll right bottom
             @include hidpi
